ara/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ara
  namespace: ara
  labels:
    app: ara
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ara
  template:
    metadata:
      labels:
        app: ara
    spec:
      containers:
        - name: ara-api
          image: docker.io/recordsansible/ara-api:fedora35-distribution-latest
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              cpu: 500m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /var/opt/ara
              name: ara
      volumes:
      - name: ara
        persistentVolumeClaim:
          claimName: ara
