ara/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ara
  namespace: ara
spec:
  selector:
    app: ara
  ports:
  - name: http
    targetPort: 8000
    port: 8000
